--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: circleci/golang:1.15
+      - image: alexfalkowski/go:1.15
     steps:
       - checkout
       - restore_cache:
@@ -16,10 +16,21 @@ jobs:
           paths:
             - "/go/pkg/mod"
       - run: make specs
-      - run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin v1.31.0
       - run: make lint
+  release:
+    docker:
+      - image: alexfalkowski/release:1.0
+    steps:
+      - checkout
+      - run: release.sh
 
 workflows:
   go-health:
     jobs:
       - build
+      - release:
+          requires:
+            - build
+          filters:
+            branches:
+              only: main
