feat: update go to version 1.16 (#24)
* feat: update go to version 1.16

* build: enable linters

* ci: new cache

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,23 +3,23 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: alexfalkowski/go:1.15
+      - image: alexfalkowski/go:1.16
     steps:
       - checkout
       - restore_cache:
           keys:
-            - go-health-mod-cache-{{ checksum "go.sum" }}
-            - go-health-mod-cache-
+            - go:1.16-health-mod-cache-{{ checksum "go.sum" }}
+            - go:1.16-health-mod-cache-
       - run: make dep
       - save_cache:
-          key: go-health-mod-cache-{{ checksum "go.sum" }}
+          key: go:1.16-health-mod-cache-{{ checksum "go.sum" }}
           paths:
             - "/go/pkg/mod"
       - run: make specs
       - run: make lint
   release:
     docker:
-      - image: alexfalkowski/release:1.0
+      - image: alexfalkowski/release:2.0
     steps:
       - checkout
       - run: release.sh
