--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ workflows:
     jobs:
       - build
       - release:
+          context: gh
           requires:
             - build
           filters:
