--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: alexfalkowski/go:1.19
+      - image: alexfalkowski/go:1.19-3.1
     steps:
       - checkout
       - run: make dep
@@ -13,7 +13,7 @@ jobs:
       - run: make goveralls
   release:
     docker:
-      - image: alexfalkowski/release:2.0
+      - image: alexfalkowski/release:3.0
     steps:
       - checkout
       - run: release
