--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ jobs:
       - image: alexfalkowski/go:1.19-3.1
     steps:
       - checkout
+      - run: git submodule sync
+      - run: git submodule update --init
       - run: make dep
       - run: make lint
       - run: make sec
@@ -29,3 +31,5 @@ workflows:
           filters:
             branches:
               only: master
+
+# VS Code Extension Version: 1.5.1
