--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,18 @@ jobs:
           key: go-health-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
+      - restore_cache:
+          name: restore go build cache
+          keys:
+            - go-health-go-build-cache-{{ checksum "go.sum" }}
       - run: make lint
       - run: make sec
       - run: make specs
+      - save_cache:
+          name: save go build cache
+          key: go-health-go-build-cache-{{ checksum "go.sum" }}
+          paths:
+            - /home/circleci/.cache/go-build
       - run: make goveralls
       - store_artifacts:
           path: test/reports
