--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,11 +17,11 @@ jobs:
       - restore_cache:
           name: restore deps
           keys:
-            - go-health-cache-{{ checksum "go.sum" }}
+            - go-health-go-cache-{{ checksum "go.sum" }}
       - run: make dep
       - save_cache:
           name: save deps
-          key: go-health-cache-{{ checksum "go.sum" }}
+          key: go-health-go-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/go/pkg/mod
       - restore_cache:
