--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,6 +18,7 @@ jobs:
           name: restore deps
           keys:
             - go-health-go-cache-{{ checksum "go.sum" }}
+            - go-health-go-cache-
       - run: make dep
       - save_cache:
           name: save deps
@@ -28,6 +29,7 @@ jobs:
           name: restore go build cache
           keys:
             - go-health-go-build-cache-{{ checksum "go.sum" }}
+            - go-health-go-build-cache-
       - run: make lint
       - run: make sec
       - run: make specs
