--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,7 +38,7 @@ jobs:
           key: go-health-go-build-cache-{{ checksum "go.sum" }}
           paths:
             - /home/circleci/.cache/go-build
-      - run: make goveralls
+      - run: make func-coverage
       - store_test_results:
           path: test/reports
       - store_artifacts:
