--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,6 +48,7 @@ jobs:
           path: test/reports
       - codecov/upload:
           file: test/reports/final.cov
+      - run: make benchmarks
     resource_class: large
   release:
     docker:
