--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,60 +1,18 @@
 linters:
-  disable-all: true
-  enable:
-    - asciicheck
-    - bidichk
-    - cyclop
-    - decorder
-    - dogsled
-    - dupl
-    - durationcheck
-    - errchkjson
-    - errname
-    - errorlint
+  enable-all: true
+  disable:
     - exportloopref
-    - exhaustive
-    - funlen
-    - gci
-    - gocognit
-    - goconst
-    - gocritic
-    - gocyclo
-    - godot
-    - godox
-    - gofmt
-    - gofumpt
-    - goheader
-    - goimports
-    - gomoddirectives
-    - gomodguard
-    - goprintffuncname
-    - gosec
-    - grouper
-    - importas
-    - lll
-    - maintidx
-    - makezero
-    - misspell
-    - nakedret
-    - nestif
-    - nilerr
-    - nilnil
-    - nlreturn
-    - noctx
-    - nolintlint
-    - prealloc
-    - predeclared
-    - promlinter
-    - revive
-    - rowserrcheck
-    - sqlclosecheck
-    - stylecheck
-    - tenv
-    - testpackage
-    - thelper
-    - tparallel
-    - unconvert
-    - unparam
-    - wastedassign
-    - whitespace
-    - wsl
+    - tagalign
+    - gochecknoinits
+    - bodyclose
+    - depguard
+    - exhaustruct
+    - fatcontext
+    - forcetypeassert
+    - gochecknoglobals
+    - ireturn
+    - mnd
+    - paralleltest
+    - varnamelen
+    - wrapcheck
+    - tagliatelle
