--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,18 +1,41 @@
+version: "2"
 linters:
-  enable-all: true
+  default: all
   disable:
-    - tagalign
-    - gochecknoinits
     - bodyclose
     - depguard
     - exhaustruct
     - fatcontext
     - forcetypeassert
     - gochecknoglobals
+    - gochecknoinits
     - ireturn
     - mnd
     - paralleltest
+    - tagalign
+    - tagliatelle
     - varnamelen
     - wrapcheck
-    - tagliatelle
-    - tenv
+  exclusions:
+    generated: lax
+    presets:
+      - comments
+      - common-false-positives
+      - legacy
+      - std-error-handling
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
+formatters:
+  enable:
+    - gci
+    - gofmt
+    - gofumpt
+    - goimports
+  exclusions:
+    generated: lax
+    paths:
+      - third_party$
+      - builtin$
+      - examples$
