--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,6 +1,8 @@
 version: "2"
 linters:
   default: all
+  enable:
+    - wsl_v5
   disable:
     - depguard
     - exhaustruct
@@ -8,9 +10,16 @@ linters:
     - gochecknoglobals
     - ireturn
     - mnd
+    - noinlineerr
     - paralleltest
     - varnamelen
     - wrapcheck
+    - wsl
+  settings:
+    wsl_v5:
+      allow-first-in-block: true
+      allow-whole-block: false
+      branch-max-lines: 2
   exclusions:
     generated: lax
     presets:
