--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: alexfalkowski/go:2.37
+      - image: alexfalkowski/go:2.38
       - image: alexfalkowski/status:latest
         command: server -i env:CONFIG
         environment:
@@ -14,31 +14,41 @@ jobs:
       - run: git submodule sync
       - run: git submodule update --init
       - restore_cache:
-          name: restore deps
+          name: restore go cache
           keys:
             - go-health-go-cache-{{ checksum "go.sum" }}
             - go-health-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
-          name: save deps
+          name: save go cache
           key: go-health-go-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/go/pkg/mod
+            - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
             - go-health-go-build-cache-{{ checksum "go.sum" }}
             - go-health-go-build-cache-
       - run: make clean
+      - restore_cache:
+          name: restore go lint cache
+          keys:
+            - go-health-go-lint-cache-{{ checksum "go.sum" }}
+            - go-health-go-lint-cache-
       - run: make lint
+      - save_cache:
+          name: save go lint cache
+          key: go-health-go-lint-cache-{{ checksum "go.sum" }}
+          paths:
+            - ~/.cache/golangci-lint
       - run: make sec
       - run: make specs
       - save_cache:
           name: save go build cache
           key: go-health-go-build-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/.cache/go-build
+            - ~/.cache/go-build
       - run: make coverage
       - store_test_results:
           path: test/reports
