build(ci): add checksum ~/.go-version

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ version: 2.1
 jobs:
   build:
     docker:
-      - image: alexfalkowski/go:2.38
+      - image: alexfalkowski/go:2.40
       - image: alexfalkowski/status:latest
         command: server -i env:CONFIG
         environment:
@@ -16,37 +16,37 @@ jobs:
       - restore_cache:
           name: restore go cache
           keys:
-            - go-health-go-cache-{{ checksum "go.sum" }}
+            - go-health-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
             - go-health-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
           name: save go cache
-          key: go-health-go-cache-{{ checksum "go.sum" }}
+          key: go-health-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
           paths:
             - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
-            - go-health-go-build-cache-{{ checksum "go.sum" }}
+            - go-health-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
             - go-health-go-build-cache-
       - run: make clean
       - restore_cache:
           name: restore go lint cache
           keys:
-            - go-health-go-lint-cache-{{ checksum "go.sum" }}
+            - go-health-go-lint-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
             - go-health-go-lint-cache-
       - run: make lint
       - save_cache:
           name: save go lint cache
-          key: go-health-go-lint-cache-{{ checksum "go.sum" }}
+          key: go-health-go-lint-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
           paths:
             - ~/.cache/golangci-lint
       - run: make sec
       - run: make specs
       - save_cache:
           name: save go build cache
-          key: go-health-go-build-cache-{{ checksum "go.sum" }}
+          key: go-health-go-build-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
           paths:
             - ~/.cache/go-build
       - run: make coverage
@@ -58,7 +58,7 @@ jobs:
     resource_class: large
   release:
     docker:
-      - image: alexfalkowski/release:3.28
+      - image: alexfalkowski/release:3.30
     working_directory: ~/go-health
     steps:
       - checkout
