--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,6 @@
 version: "2"
 linters:
   default: all
-  enable:
-    - wsl_v5
   disable:
     - depguard
     - exhaustruct
@@ -10,16 +8,13 @@ linters:
     - gochecknoglobals
     - ireturn
     - mnd
+    - nlreturn
     - noinlineerr
     - paralleltest
     - varnamelen
     - wrapcheck
     - wsl
-  settings:
-    wsl_v5:
-      allow-first-in-block: true
-      allow-whole-block: false
-      branch-max-lines: 2
+    - wsl_v5
   exclusions:
     generated: lax
     presets:
