--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
       - restore_cache:
           name: restore go cache
           keys:
-            - go-health-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}
+            - go-health-go-cache-{{ checksum "go.sum" }}-{{ checksum "~/.go-version" }}-{{ checksum ".source-key" }}
             - go-health-go-cache-
       - run: make clean
       - run: make dep
