--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,5 +1,11 @@
 version: "2"
 linters:
+  settings:
+    gosec:
+      excludes:
+        - G104
+        - G307
+        - G704
   default: all
   disable:
     - depguard
